<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_menu"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_margin="0dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp">
    <!-- 菜单按钮项 -->
    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="756dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="0dp"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/rl_btn_back"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_back"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/back" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_back"
                android:text="@string/back" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_home"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_home"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/home" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_home"
                android:text="@string/home" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_app_switch"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_app_switch"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/switch_app" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_app_switch"
                android:text="@string/app_switch" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_source"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_input_source"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/inputsource" />

            <TextView
                android:id="@+id/text_input_source"
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_input_source"
                android:text="@string/input_signal" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_show_setting"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_show_setting"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/menu" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_show_setting"
                android:text="@string/menu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_volume_sub"
            style="@style/bottom_menu_control_btn"
            android:longClickable="true">

            <ImageView
                android:id="@+id/btn_volume_sub"
                style="@style/bottom_btn_menu_image"
                android:clickable="false"
                android:src="@mipmap/volume_sub" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_volume_sub"
                android:text="@string/volume_sub" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_volume_plus"
            style="@style/bottom_menu_control_btn"
            android:longClickable="true">

            <ImageView
                android:id="@+id/btn_volume_plus"
                style="@style/bottom_btn_menu_image"
                android:clickable="false"
                android:src="@mipmap/volume_plus" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_volume_plus"
                android:text="@string/volume_plus" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_backlight_sub"
            style="@style/bottom_menu_control_btn"
            android:longClickable="true">

            <ImageView
                android:id="@+id/btn_backlight_sub"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/backlight_sub" />

            <TextView
                android:id="@+id/text_backlight_sub"
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_backlight_sub"
                android:text="@string/backlight_sub" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_backlight_plus"
            style="@style/bottom_menu_control_btn"
            android:longClickable="true">

            <ImageView
                android:id="@+id/btn_backlight_plus"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/backlight_plus" />

            <TextView
                android:id="@+id/text_backlight_plus"
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_backlight_plus"
                android:text="@string/backlight_plus" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_whiteboard"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_whiteboard"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/whiteboard" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_whiteboard"
                android:text="@string/whiteboard" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_comment"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_comment"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/marker" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_comment"
                android:text="@string/comment" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_shortcut"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_shortcut"
                style="@style/bottom_btn_menu_image"
                android:layout_width="wrap_content"
                android:src="@mipmap/shortcut" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_shortcut"
                android:text="@string/shortcut" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_user_defined"
            style="@style/bottom_menu_control_btn"
            android:visibility="gone">

            <ImageView
                android:id="@+id/btn_user_defined"
                style="@style/bottom_btn_menu_image"
                android:src="@mipmap/user_defined" />

            <TextView
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_user_defined"
                android:text="@string/usered_defined" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_btn_half_screen"
            style="@style/bottom_menu_control_btn">

            <ImageView
                android:id="@+id/btn_half_screen"
                style="@style/bottom_btn_menu_image"
                android:layout_marginTop="@dimen/dp_8"
                android:src="@mipmap/screen_small" />

            <TextView
                android:layout_marginTop="@dimen/dp_2"
                android:id="@+id/txt_half_screen"
                style="@style/btn_menu_text_marquee"
                android:layout_below="@id/btn_half_screen"
                android:text="@string/screen_drop_down" />
        </RelativeLayout>


    </LinearLayout>

    <!--&lt;!&ndash; 菜单按钮项 &ndash;&gt;-->
    <!--<LinearLayout-->
    <!--android:id="@+id/menu_layout_2"-->
    <!--android:layout_width="350dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_toRightOf="@id/h_divider_1"-->
    <!--android:orientation="horizontal"-->
    <!--android:visibility="visible"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_margin="0dp"-->
    <!--android:padding="0dp">-->
    <!---->
    <!--</LinearLayout>-->

</RelativeLayout>

