<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/dp_100"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_sign_step"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_auto_changesource"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/text_scale_mode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_pic_zoommode"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/text_noise_reduction_mode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_pic_noise_reduction"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13" />


        <TextView
            android:id="@+id/text_vga_mode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/str_pic_vga"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/text_szyp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="数字音频输出"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/main_selected_bg"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_all_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:divider="@null"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/ll_vga"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rl_setting_light"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_clock_title"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/str_pic_clock"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />


                <SeekBar
                    android:id="@+id/seek_clock"
                    style="@style/seek_vga_bar" />

                <TextView
                    android:id="@+id/txt_clock"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/display_sharpness"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_phase_title"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/str_pic_phase"

                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />


                <SeekBar
                    android:id="@+id/seek_phase"
                    style="@style/seek_vga_bar" />

                <TextView
                    android:id="@+id/txt_phase_val"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/display_sharpness"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="@dimen/dp_5"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_horizontal_title"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/str_pic_horizontal_pos"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />


                <SeekBar
                    android:id="@+id/seek_horizontal"
                    style="@style/seek_vga_bar" />

                <TextView
                    android:id="@+id/txt_horizontal_val"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="0.3"

                    android:gravity="center"
                    android:text="@string/display_sharpness"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_vertical"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/str_pic_vertical_pos"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />


                <SeekBar
                    android:id="@+id/seek_vertical"
                    style="@style/seek_vga_bar" />

                <TextView
                    android:id="@+id/txt_vertical_val"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/display_sharpness"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_pic_pc_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/str_pic_autotune"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </FrameLayout>
</LinearLayout>