<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="200dp"
                android:layout_height="158dp"
              android:backgroundTint="@color/transparent"
              android:orientation="vertical"
              android:background="@null">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_title_custom_dialog"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#323232"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="0dp"
        android:background="@drawable/bg_middle_custom_dialog">

        <EditText
            android:id="@+id/message_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            android:text="@string/tip_user_defined_source"
            android:textSize="19sp"
            android:textColor="#323232"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:textSize="19sp"
            android:textColor="#323232"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#969696"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:background="@drawable/bg_bottom_custom_dialog"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:background="@drawable/bbuton_info_rounded"
            android:textColor="@color/com_bg_gray"
            android:text="@string/cancel"
            android:layout_gravity="center_vertical"
            android:textSize="21sp"
            android:layout_weight="1"
            android:singleLine="true" />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="#969696"/>

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:background="@drawable/bbuton_danger_rounded"
            android:layout_marginLeft="3dip"
            android:textSize="21sp"
            android:text="@string/sure"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_focus_color"
            android:layout_weight="1"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>